Wrapping fix

--- a/public/css/docsignview.css
+++ b/public/css/docsignview.css
@@ -871,6 +871,7 @@ body.signview {
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 5px;
+  white-space:nowrap;
 }
 
 .signview .pagefooter {
